--- a/app/src/main/res/layout/fragment_movie_posters.xml
+++ b/app/src/main/res/layout/fragment_movie_posters.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:columnWidth="@dimen/grid_item_movie_poster_width"
+    android:gravity="center"
     android:horizontalSpacing="@dimen/grid_item_movie_poster_spacing"
     android:numColumns="auto_fit"
     android:stretchMode="columnWidth"
