--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="primary_color">#424242</color>
+    <color name="movie_details_header">#009688</color>
+    <color name="movie_details_header_text_color">#F5F5F5</color>
+    <color name="movie_details_average_vote_text_color">#000000</color>
 </resources>
