--- a/app/src/main/res/layout/fragment_movie_posters.xml
+++ b/app/src/main/res/layout/fragment_movie_posters.xml
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/movie_posters_grid"
+    android:id="@+id/frame_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:columnWidth="@dimen/grid_item_movie_poster_width"
-    android:gravity="center"
-    android:horizontalSpacing="@dimen/grid_item_movie_poster_spacing"
-    android:numColumns="auto_fit"
-    android:stretchMode="columnWidth"
-    android:verticalSpacing="@dimen/grid_item_movie_poster_spacing"
-    tools:context="com.elshadsm.popularmovies.fragments.MoviePostersFragment">
+    android:layout_height="match_parent">
 
-</GridView>
+    <GridView
+        android:id="@+id/movie_posters_grid"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:columnWidth="@dimen/grid_item_movie_poster_width"
+        android:gravity="center"
+        android:horizontalSpacing="@dimen/grid_item_movie_poster_spacing"
+        android:numColumns="auto_fit"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="@dimen/grid_item_movie_poster_spacing"
+        tools:context="com.elshadsm.popularmovies.fragments.MoviePostersFragment">
+
+    </GridView>
+
+    <TextView
+        android:id="@+id/empty_message_view"
+        style="@android:style/TextAppearance.Large"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center"
+        android:text="@string/movie_posters_empty_message" />
+
+</FrameLayout>
