--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -12,4 +12,9 @@
         android:orderInCategory="2"
         android:title="@string/main_menu_top_rated_item_title"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_favorites"
+        android:orderInCategory="3"
+        android:title="@string/main_menu_favorites_item_title"
+        app:showAsAction="never" />
 </menu>
