--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,10 +4,11 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="primary_color">#424242</color>
+    <color name="primary_text_color">#424242</color>
     <color name="movie_details_header">#009688</color>
     <color name="movie_details_header_text_color">#F5F5F5</color>
     <color name="movie_details_average_vote_text_color">#000000</color>
     <color name="movie_details_mark_as_favorite_background">#64b5f6</color>
     <color name="movie_details_mark_as_favorite_text_color">#9e9e9e</color>
+    <color name="movie_details_review_container_background">#eeeeee</color>
 </resources>
