--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,14 +6,15 @@
 
     <dimen name="size_xl">28dp</dimen>
     <dimen name="size_l">16dp</dimen>
-    <dimen name="size">4dp</dimen>
+    <dimen name="size">8dp</dimen>
+    <dimen name="size_s">4dp</dimen>
 
     <dimen name="movie_details_image_width">147dp</dimen>
     <dimen name="movie_details_image_height">196dp</dimen>
 
     <dimen name="header_text_size">34sp</dimen>
     <dimen name="headline_text_size">24sp</dimen>
-    <dimen name="medium_text_size">18sp</dimen>
+    <dimen name="normal_text_size">16sp</dimen>
     <dimen name="small_text_size">14sp</dimen>
 
     <dimen name="add_favorite_star_size">48dp</dimen>
