--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,20 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="ContentSansSerifNormal" parent="@style/TextAppearance.AppCompat.Body1">
+        <item name="android:textSize">@dimen/normal_text_size</item>
+        <item name="android:textColor">@color/primary_text_color</item>
+        <item name="android:fontFamily">"sans-serif-normal"</item>
+    </style>
+
+    <style name="BodySansSerifThin" parent="@style/TextAppearance.AppCompat.Body1">
+        <item name="android:textColor">@color/primary_text_color</item>
+        <item name="android:fontFamily">"sans-serif-thin"</item>
+    </style>
+
+    <style name="BodySansSerifNormal" parent="@style/TextAppearance.AppCompat.Body1">
+        <item name="android:textColor">@color/primary_text_color</item>
+        <item name="android:fontFamily">"sans-serif-normal"</item>
+    </style>
+
 </resources>
