--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -60,6 +60,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/size_s"
+                    android:textColor="@color/primary_text_color"
                     android:textSize="@dimen/headline_text_size" />
 
                 <TextView
@@ -93,6 +94,23 @@
             android:layout_margin="@dimen/size_l" />
 
         <TextView
+            android:id="@+id/trailers_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/size_l"
+            android:layout_marginRight="@dimen/size_l"
+            android:text="@string/movie_details_trailers_title"
+            android:textColor="@color/primary_text_color"
+            android:textSize="@dimen/headline_text_size" />
+
+        <LinearLayout
+            android:id="@+id/trailer_list_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/size_l"
+            android:orientation="vertical" />
+
+        <TextView
             android:id="@+id/reviews_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -106,8 +124,8 @@
             android:id="@+id/review_list_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginBottom="@dimen/size_l"/>
+            android:layout_marginBottom="@dimen/size_l"
+            android:orientation="vertical" />
 
     </LinearLayout>
 
