--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,5 +17,9 @@
     <dimen name="normal_text_size">16sp</dimen>
     <dimen name="small_text_size">14sp</dimen>
 
+    <dimen name="single_line_list_item_height">48dp</dimen>
+
+    <dimen name="play_trailer_icon_size">40dp</dimen>
+
     <dimen name="add_favorite_star_size">48dp</dimen>
 </resources>
