--- a/app/src/main/res/layout/fragment_movie_posters.xml
+++ b/app/src/main/res/layout/fragment_movie_posters.xml
@@ -24,6 +24,7 @@
         style="@android:style/TextAppearance.Large"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:visibility="invisible"
         android:gravity="center"
         android:text="@string/movie_posters_empty_message" />
 
