--- a/app/src/main/res/layout/fragment_movie_posters.xml
+++ b/app/src/main/res/layout/fragment_movie_posters.xml
@@ -3,29 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frame_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context="com.elshadsm.popularmovies.fragments.MoviePostersFragment">
 
-    <GridView
-        android:id="@+id/movie_posters_grid"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/movie_posters_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:columnWidth="@dimen/grid_item_movie_poster_width"
-        android:gravity="center"
-        android:horizontalSpacing="@dimen/grid_item_movie_poster_spacing"
-        android:numColumns="auto_fit"
-        android:stretchMode="columnWidth"
-        android:verticalSpacing="@dimen/grid_item_movie_poster_spacing"
-        tools:context="com.elshadsm.popularmovies.fragments.MoviePostersFragment">
-
-    </GridView>
+        android:layout_height="match_parent" />
 
     <TextView
         android:id="@+id/empty_message_view"
         style="@android:style/TextAppearance.Large"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:visibility="invisible"
         android:gravity="center"
-        android:text="@string/movie_posters_empty_message" />
+        android:text="@string/movie_posters_empty_message"
+        android:visibility="invisible" />
 
 </FrameLayout>
