--- a/app/src/main/res/layout/movie_poster_item.xml
+++ b/app/src/main/res/layout/movie_poster_item.xml
@@ -7,7 +7,6 @@
         android:id="@+id/movie_poster"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:contentDescription="@string/movie_poster_image_content_description"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        android:contentDescription="@string/movie_poster_image_content_description" />
 </FrameLayout>
